# gazdebordeaux-ha

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  conftest.py  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: hacs-action.yml  tests.yml
custom_components/gazdebordeaux/: __init__.py  config_flow.py  const.py  coordinator.py  enum.py  gazdebordeaux.py  manifest.json  manifest.py  option_flow.py  sensor.py  strings.json
tests/: conftest.py  test_gazdebordeaux.py
tests/integration/: conftest.py  test_config_flow.py  test_sensor.py
